load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_testonly = 1,
    default_visibility = ["//kmscng:__subpackages__"],
)

cc_library(
    name = "matchers",
    hdrs = ["matchers.h"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        "//common/test:matchers",
        "//kmscng/util:status_utils",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "matchers_test",
    size = "small",
    srcs = ["matchers_test.cc"],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        ":matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "registered_provider_test",
    size = "small",
    srcs = ["registered_provider_test.cc"],
    linkopts = ["-DEFAULTLIB:ncrypt.lib"],
    tags = [
        # This test is manual because it relies on the output of the
        # move_dll_to_system32 genrule, and for some reason that's flaky.
        "manual",
    ],
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        "//common/test:resource_helpers",
        "//common/test:test_status_macros",
        "//kmscng:cng_headers",
        "//kmscng:object",
        "//kmscng:provider",
        "//kmscng/util:registration",
        "//kmscng/util:string_utils",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest_main",
    ],
)
