load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//kmsp11:__subpackages__"])

cc_library(
    name = "crypter_interfaces",
    hdrs = ["crypter_interfaces.h"],
    deps = [
        "//kmsp11:cryptoki_headers",
        "//kmsp11:object",
        "//kmsp11/util:kms_client",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "crypter_ops",
    srcs = ["crypter_ops.cc"],
    hdrs = ["crypter_ops.h"],
    deps = [
        ":crypter_interfaces",
        ":ecdsa",
        ":kms_digesting_signer",
        ":kms_digesting_verifier",
        ":rsaes_oaep",
        ":rsassa_pkcs1",
        ":rsassa_pss",
        ":rsassa_raw_pkcs1",
        "//kmsp11/util:errors",
    ],
)

cc_test(
    name = "crypter_ops_test",
    size = "small",
    srcs = ["crypter_ops_test.cc"],
    deps = [
        ":crypter_ops",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "ecdsa",
    srcs = ["ecdsa.cc"],
    hdrs = ["ecdsa.h"],
    deps = [
        ":crypter_interfaces",
        ":kms_prehashed_signer",
        ":preconditions",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "//kmsp11/util:string_utils",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "ecdsa_test",
    size = "small",
    srcs = ["ecdsa_test.cc"],
    deps = [
        ":ecdsa",
        "//fakekms/cpp:fakekms",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "find",
    hdrs = ["find.h"],
    deps = [
        "//kmsp11:cryptoki_headers",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "kms_digesting_signer",
    srcs = ["kms_digesting_signer.cc"],
    hdrs = ["kms_digesting_signer.h"],
    deps = [
        ":crypter_interfaces",
        ":ecdsa",
        ":rsassa_pkcs1",
        ":rsassa_pss",
        ":kms_prehashed_signer",
        ":preconditions",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "kms_digesting_signer_test",
    size= "small",
    srcs = ["kms_digesting_signer_test.cc"],
    deps = [
        ":kms_digesting_signer",
        ":rsassa_pkcs1",
        ":rsassa_pss",
        "//fakekms/cpp:fakekms",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "kms_digesting_verifier",
    srcs = ["kms_digesting_verifier.cc"],
    hdrs = ["kms_digesting_verifier.h"],
    deps = [
        ":crypter_interfaces",
        ":ecdsa",
        ":preconditions",
        ":rsassa_pkcs1",
        ":rsassa_pss",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "kms_digesting_verifier_test",
    size= "small",
    srcs = ["kms_digesting_verifier_test.cc"],
    deps = [
        ":kms_digesting_verifier",
        ":kms_digesting_signer",
        "//fakekms/cpp:fakekms",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "kms_prehashed_signer",
    srcs = ["kms_prehashed_signer.cc"],
    hdrs = ["kms_prehashed_signer.h"],
    deps = [
        ":crypter_interfaces",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "operation",
    hdrs = ["operation.h"],
    deps = [
        ":crypter_ops",
        ":find",
        "@com_google_absl//absl/types:variant",
    ],
)

cc_library(
    name = "preconditions",
    srcs = ["preconditions.cc"],
    hdrs = ["preconditions.h"],
    deps = [
        "//kmsp11:cryptoki_headers",
        "//kmsp11:object",
        "@com_google_absl//absl/status",
    ],
)

cc_test(
    name = "preconditions_test",
    size = "small",
    srcs = ["preconditions_test.cc"],
    deps = [
        ":preconditions",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "rsaes_oaep",
    srcs = ["rsaes_oaep.cc"],
    hdrs = ["rsaes_oaep.h"],
    deps = [
        ":crypter_interfaces",
        ":preconditions",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "//kmsp11/util:string_utils",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "rsaes_oaep_test",
    size = "small",
    srcs = ["rsaes_oaep_test.cc"],
    deps = [
        ":rsaes_oaep",
        "//fakekms/cpp:fakekms",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "rsassa_pkcs1",
    srcs = ["rsassa_pkcs1.cc"],
    hdrs = ["rsassa_pkcs1.h"],
    deps = [
        ":crypter_interfaces",
        ":kms_prehashed_signer",
        ":preconditions",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "//kmsp11/util:string_utils",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "rsassa_pkcs1_test",
    size = "small",
    srcs = ["rsassa_pkcs1_test.cc"],
    deps = [
        ":rsassa_pkcs1",
        "//fakekms/cpp:fakekms",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "rsassa_pss",
    srcs = ["rsassa_pss.cc"],
    hdrs = ["rsassa_pss.h"],
    deps = [
        ":crypter_interfaces",
        ":kms_prehashed_signer",
        ":preconditions",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "//kmsp11/util:string_utils",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "rsassa_pss_test",
    size = "small",
    srcs = ["rsassa_pss_test.cc"],
    deps = [
        ":rsassa_pss",
        "//fakekms/cpp:fakekms",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "rsassa_raw_pkcs1",
    srcs = ["rsassa_raw_pkcs1.cc"],
    hdrs = ["rsassa_raw_pkcs1.h"],
    deps = [
        ":crypter_interfaces",
        ":preconditions",
        "//kmsp11:cryptoki_headers",
        "//kmsp11/util:crypto_utils",
        "//kmsp11/util:kms_client",
        "//kmsp11/util:status_macros",
        "//kmsp11/util:string_utils",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "rsassa_raw_pkcs1_test",
    size = "small",
    srcs = ["rsassa_raw_pkcs1_test.cc"],
    deps = [
        ":rsassa_raw_pkcs1",
        "//fakekms/cpp:fakekms",
        "//kmsp11/test",
        "@com_google_googletest//:gtest_main",
    ],
)
